KSENROLL-13065: Fixing wrapping issue for Edit time slot lightbox am/pm radio buttons.
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-core/trunk@70490 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/enroll.less
+++ b/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/enroll.less
@@ -2137,3 +2137,8 @@ section.uif-disclosure {
     padding-left: 6px;
     padding-top: 0;
 }
+
+//Edit time slot lightbox am/pm radio buttons wrapping fix  KSENROLL-13065
+.ks-TimeSlots-editTimeSlot-lightbox .uif-boxLayoutVerticalItem {
+    display: inline-block;
+}
